# pkg/api/server/rest/v1/node_pools.go
@@ -29,8 +29,9 @@ func (api *LatticeAPI) setupNoodPoolEndpoints() {
 // @ID list-node-pools
 // @Summary Lists node pools
 // @Description list node pools
-// @Router /systems/{systemId}/node-pools [get]
-// @Param systemId path string true "System ID"
+// @Router /systems/{system}/node-pools [get]
+// @Tags node-pools
+// @Param system path string true "System ID"
 // @Accept  json
 // @Produce  json
 // @Success 200 {array} v1.NodePool
@@ -50,8 +51,9 @@ func (api *LatticeAPI) handleListNodePools(c *gin.Context) {
 // @ID get-node-pool
 // @Summary Get node pool
 // @Description get node pool
-// @Router /systems/{systemId}/node-pools/{id} [get]
-// @Param systemId path string true "System ID"
+// @Router /systems/{system}/node-pools/{id} [get]
+// @Tags node-pools
+// @Param system path string true "System ID"
 // @Param id path string true "NodePool ID"
 // @Accept  json
 // @Produce  json
